<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_view"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="35dp"
            android:textColor="@color/White"
            android:textSize="25sp"
            android:textAlignment="center"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aquirebold"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:text="@string/admin_login"
            android:layout_width="wrap_content"
            android:fontFamily="@font/aquire"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/admin_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user"
            android:autofillHints=""
            android:inputType="text"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/admin_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:autofillHints=""
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/btn_adminLogin"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:textColor="@color/White"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aquire"
            />
    </LinearLayout>

    <LinearLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>

</RelativeLayout>