<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_view"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="35dp"
            android:textColor="@color/Black"
            android:textSize="30sp"
            android:textAlignment="center"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aquirebold"
            android:gravity="center_horizontal" />
        <EditText
            android:id="@+id/login_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user"
            android:autofillHints=""
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/login_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:autofillHints=""
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/btn_login"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:textColor="@color/White"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login"
            android:fontFamily="@font/aquire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/create_new_acc"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:layout_gravity="center"
            android:text="@string/create_new_acc"
            android:fontFamily="@font/aquirebold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>