<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_view"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
        android:layout_marginTop="35dp"
        android:textColor="@color/White"
        android:textSize="25sp"
        android:textAlignment="center"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:fontFamily="@font/aquirebold"/>
        <TextView
            android:id="@+id/welcome"
            android:layout_marginTop="35dp"
            android:textColor="@color/Blue"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:fontFamily="@font/aquire"/>
        <Button
            android:id="@+id/btn_question"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:textColor="@color/White"
            android:background="@color/colorPrimaryDark"
            android:text="@string/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aquire"/>
        <Button
            android:id="@+id/btn_screen"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:textColor="@color/White"
            android:background="@color/colorPrimaryDark"
            android:text="@string/screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aquire"/>
    </LinearLayout>


</RelativeLayout>